--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-prevent-browser-back": "^1.0.5",
     "vue-router": "^3.5.1",
     "vue-wechat-title": "^2.0.7",
-    "element-ui": "2.15.8"
+    "element-ui": "2.15.8",
+    "sass-loader": "^10.1.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~5.0.0",
